读博后第一次更新public

--- a/public/publication-type/1/index.html
+++ b/public/publication-type/1/index.html
@@ -57,7 +57,7 @@
   
   
 
-  <meta name="author" content="Yimin Gong (Ian)" />
+  <meta name="author" content="GONG Yimin (Frank)" />
 
   
   
@@ -794,7 +794,7 @@
         
 
   <span class="author-highlighted">
-      Yimin Gong (Ian)</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>
+      GONG Yimin (Frank)</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>
       </div>
       
     </div>
